# jjj

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  FEATURES.md  FINAL_SUMMARY.md  HIERARCHY_DESIGN.md  HIERARCHY_PROGRESS.md  IMPLEMENTATION_SUMMARY.md  PROJECT_STATUS.md  README.md  README_QUICKSTART.md  SECURITY.md  SESSION_SUMMARY.md  VSCODE_EXTENSION_PLAN.md  WORK_HIERARCHY.md  book.toml  install.sh  main.py  mkdocs.yml  pyproject.toml  requirements.txt  verify_json.sh
.claude/: settings.local.json
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml
demo/: README.md  code-review.tape  demo-commands.sh  jj-integration.tape  problem-solving.tape  setup.sh  tui.tape  workflow.tape
docs/: README.md  SUMMARY.md  index.md  workflow-analysis.md
docs-site/: astro.config.mjs  package-lock.json  package.json  tailwind.config.mjs
docs-site/public/: CNAME  SKILL.md  TEST.md  skill.md
docs-site/src/: content.config.ts
docs/architecture/: change-tracking.md  comment-relocation.md  consistency.md  design-philosophy.md  event-lifecycle.md  rfc-001-entity-based-workflow.md  storage.md
docs/contributing/: testing.md
docs/examples/: bug-triage.md  feature-workflow.md  release-planning.md
docs/getting-started/: concepts.md  first-project.md  installation.md  quick-start.md
docs/guides/: ai-agents.md  board-dashboard.md  code-review.md  cookbook.md  critique-guidelines.md  jujutsu-integration.md  philosophy-in-practice.md  problem-solving.md  ranking.md  review-user-journey.md  vscode-extension.md  work-hierarchy.md
docs/plans/: 2026-01-25-enforce-critique-blocking-design.md  2026-01-25-github-integration-design.md  2026-01-25-next-command-design.md  2026-01-25-unified-critique-design.md  2026-01-25-unified-critique-implementation.md  2026-01-26-ux-improvements-design.md  2026-01-26-ux-improvements-implementation.md  (+43 more)
journeys/: 01-solo-quickstart.md  02-team-workflow.md  03-new-contributor.md  04-conflict-resolution.md  05-error-recovery.md  06-end-to-end-showcase.md  07-solution-lifecycle.md  08-critique-validate.md  09-events-audit.md  10-status-and-filtering.md  11-milestone-advanced.md  12-github-sync.md  13-problem-reopen.md  14-milestone-status.md  15-assignee-workflow.md  16-problem-graph.md  17-solution-diff.md  18-automation-rules.md
src/: automation.rs  cli.rs  commands.rs  context.rs  display.rs  domain.rs  embeddings.rs  error.rs  id.rs  jj.rs  lib.rs  local_config.rs  main.rs  models.rs  picker.rs  resolve.rs  storage.rs  tui.rs  utils.rs
tests/: command_completion_test.rs  command_critique_test.rs  command_db_test.rs  command_fetch_test.rs  command_insights_test.rs  command_milestone_test.rs  command_next_test.rs  command_overlaps_test.rs  command_problem_test.rs  command_search_test.rs  command_solution_test.rs  command_status_test.rs  command_tags_test.rs  command_timeline_test.rs  concurrent_writers_test.rs  config_management.rs  doc_test.rs  embedding_recommendations_test.rs  embedding_search_test.rs  events_test.rs  github_sync_e2e_test.rs  integration_storage.rs  integration_test.rs  journey_test.rs  negative_tests.rs  push_fetch_test.rs  ranking_workflow.rs  review_workflow.rs  sqlite_storage_test.rs  task_management.rs  test_helpers.rs  workflow_test.rs
tools/: journey-to-doc.sh
uxr/: README.md  lib.sh  run-all.sh
vscode/: .eslintrc.json  .mocharc.yml  .prettierignore  .vscodeignore  CHANGELOG.md  EDITING.md  FORMATTING.md  LICENSE  LINTING.md  README.md  UX_PLAN.md  package-lock.json  package.json  tsconfig.json
vscode-jjj/: .mocharc.yml  .vscodeignore  package.json  tsconfig.test.json
(+204 files in other folders)
