[package]
name = "jjj"
version = "0.3.0"
edition = "2021"
rust-version = "1.82"
authors = ["jjj contributors"]
description = "Distributed project management and code review for Jujutsu"
license = "Apache-2.0"
repository = "https://github.com/doug/jjj"
homepage = "https://jjj.recursivewhy.com"
readme = "README.md"
keywords = ["jj", "jujutsu", "project-management", "code-review", "kanban"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
# CLI parsing
clap = { version = "4.5", features = ["derive", "cargo"] }
clap_complete = "4.5"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yml = "0.0.12"
toml = "0.8"

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "1.0"

# Terminal UI
ratatui = "0.29"
crossterm = "0.28"


# SQLite storage
rusqlite = { version = "0.31", features = ["bundled"] }


# UUID generation
uuid = { version = "1.11", features = ["v7"] }


[dev-dependencies]
tempfile = "3.13"
pretty_assertions = "1.4"

[build-dependencies]
clap = { version = "4.5", features = ["derive", "cargo"] }
clap_complete = "4.5"

[lib]
name = "jjj"
path = "src/lib.rs"

[[bin]]
name = "jjj"
path = "src/main.rs"
